# WARP_reg_and_manager

./: .gitignore  CONFIG_SETUP_GUIDE.md  README.md  WARP.md  WarpAccountManager.spec  accounts.db.backup  accounts.db1  activate.py  config.yaml  fix_certificate.bat  languages.py  main.py  proxy.txt  pyproject.toml  requirements.txt  start-warp-linux.sh  start-warp-macos.sh  start-warp-win.bat  start-warp-with-proxy.ps1
.github/workflows/: build.yml
.kilocode/: mcp.json
.kilocode/rules/: 开发环境.md
.qoder/rules/: menewexprilex.md
scripts/: build-nuitka.ps1  build-win.ps1  find_qt_plugins.py  make_ico.py
src/: __init__.py
src/config/: __init__.py  languages.py
src/core/: __init__.py  warp_account_manager.py
src/managers/: __init__.py  certificate_manager.py  database_manager.py  mitmproxy_manager.py  temp_email_manager.py
src/proxy/: __init__.py  proxy_linux.py  proxy_macos.py  proxy_windows.py  warp_proxy_script.py
src/ui/: dark_theme.qss  ui_dialogs.py
src/utils/: __init__.py  account_creator.py  account_processor.py  activate.py  browser_warp_registration.py  utils.py  warp_registration.py  windows_proxy_diagnosis.py  ws_bridge.py
src/workers/: __init__.py  background_workers.py
tests/: auto_register_e2e.py  manual_chrome_login.py  manual_fingerprint_login.py  test_fingerprint_manual_login.py
